--- a/estilo_prod.css
+++ b/estilo_prod.css
@@ -225,6 +225,11 @@ nav a{
     list-style: none;
 }
 
+.img-fluid {
+    max-width: 100%;
+    max-height: 240px;
+}
+
 @media (max-width: 768px) {
     .header {
         flex-direction: column;
